--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div>Communities</div>
             </div>
 
-            <div class="side-list2">
+            <div class="side-list">
                 <div>Settings</div>
                 <div>Support</div>
                 <div>Privacy</div>
@@ -39,11 +39,15 @@
         </div>
         <div class="top">
             <div class="top1">
-                <div class="srchicon"><i class="fa-solid fa-magnifying-glass"></i></div>
-                <div class="input"><input type="text"></div>
-                <div class="bell"><i class="fa-solid fa-bell"></i></div>
-                <div class="profile">hey</div>
-                <div class="name">HEY</div>
+                <div class="search-container">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" placeholder="Search...">
+                </div>
+                <div class="user-info">
+                    <i class="fa-solid fa-bell"></i>
+                    <div class="profilepic"></div>
+                    <span>Morgan Oakley</span>
+                </div>
             </div>
             <div class="top2"></div>
         </div>
