removed main, now restarting

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     <div class="upper-grid">
         <div class="side">
             <div class="side-logo">
-                <p><i class="fa-solid fa-grip"></i> Dashboard</p>
+                <p><i class="fa-brands fa-gratipay"></i> Dashboard</p>
             </div>
-            <div class="side-list">
-                <div>Home</div>
-                <div>Profile</div>
-                <div>Message</div>
-                <div>History</div>
-                <div>Task</div>
-                <div>Communities</div>
+            <div class="side-list mb40">
+                <div><i class="fa-solid fa-house"></i>Home</div>
+                <div><i class="fa-solid fa-user"></i>Profile</div>
+                <div><i class="fa-solid fa-message"></i>Message</div>
+                <div><i class="fa-solid fa-clock-rotate-left"></i>History</div>
+                <div><i class="fa-solid fa-list-check"></i>Task</div>
+                <div><i class="fa-solid fa-comments"></i>Communities</div>
             </div>
 
             <div class="side-list">
-                <div>Settings</div>
-                <div>Support</div>
-                <div>Privacy</div>
+                <div><i class="fa-solid fa-gear"></i>Settings</div>
+                <div><i class="fa-solid fa-screwdriver-wrench"></i>Support</div>
+                <div><i class="fa-solid fa-shield-halved"></i>Privacy</div>
             </div>
         </div>
         <div class="top">
@@ -68,145 +68,7 @@
         <!-- top ends here -->
         <!-- main start here -->
 
-        <div class="main">
-            <div class="project-title">Your Projects</div>
-            <div class="annc-title">Announcements</div>
-
-            <!-- main's left side content -->
-
-            <div class="project">
-                <div class="project-item">
-                    <div>
-                        <strong>Super Cool Project</strong>
-                        <p>A mind-blowing productivity booster that turns your chaos into zen!
-                            Packed with cutting-edge tech that'll make your workflow smoother than butter on a hot
-                            pancake.</p>
-                    </div>
-                    <div class="project-icon-container">
-                        <i class="fa-solid fa-eye"></i>
-                        <i class="fa-solid fa-pen"></i>
-                        <i class="fa-solid fa-trash"></i>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <div>
-                        <strong>Less cool Project</strong>
-                        <p>Ever tried to teach a cat to code? Well, this project is slightly more successful!
-                            We've created something that's about as organized as a penguin's dinner party,
-                            but somehow it works perfectly. Trust us, it's better than it sounds!
-                        </p>
-                    </div>
-
-                    <div class="project-icon-container">
-                        <i class="fa-solid fa-eye"></i>
-                        <i class="fa-solid fa-pen"></i>
-                        <i class="fa-solid fa-trash"></i>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <div>
-                        <strong>Impossible App</strong>
-                        <p>They said it couldn't be done, but here we are! Like trying to
-                            teach a fish to ride a bicycle, this app defies logic. Yet somehow,
-                            against all odds, it's working beautifully.
-                        </p>
-                    </div>
-                    <div class="project-icon-container">
-                        <i class="fa-solid fa-eye"></i>
-                        <i class="fa-solid fa-pen"></i>
-                        <i class="fa-solid fa-trash"></i>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <div>
-                        <strong>Easey Peasy App</strong>
-                        <p>Ever downloaded a file that said "5 minutes remaining" and it took 5 hours?
-                            Not with this app! It's so easy to use, even your grandma who still calls
-                            the internet "the Google" could master it in seconds. No technical wizardry required!</p>
-                    </div>
-                    <div class="project-icon-container">
-                        <i class="fa-solid fa-eye"></i>
-                        <i class="fa-solid fa-pen"></i>
-                        <i class="fa-solid fa-trash"></i>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <div>
-                        <strong>Ad Blocker</strong>
-                        <p>Say goodbye to those pesky pop-ups! This blocker is so effective,
-                            it even blocks ads before they're invented. It's like a bouncer for your browser,
-                            but instead of checking IDs, it dropkicks unwanted ads into the void!</p>
-                    </div>
-                    <div class="project-icon-container">
-                        <i class="fa-solid fa-eye"></i>
-                        <i class="fa-solid fa-pen"></i>
-                        <i class="fa-solid fa-trash"></i>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <div><strong>Money Maker</strong>
-                        <p>Ever dreamed of turning your pocket lint into gold? Well, this app won't do that,
-                            but it'll make you feel like a financial wizard! It's like having a tiny
-                            accountant in your pocket, minus the expensive suits and coffee addiction.
-                        </p>
-                    </div>
-                    <div class="project-icon-container">
-                        <i class="fa-solid fa-eye"></i>
-                        <i class="fa-solid fa-pen"></i>
-                        <i class="fa-solid fa-trash"></i>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Main's right side content -->
-            <div class="announcements-and-trending">
-                <div class="announcements-container"> <strong>Site Maintenance</strong>
-                    <p>Scheduled system maintenance in progress. We are performing essential updates to improve
-                        performance and security. We apologize for any inconvenience... <br />
-                        _______________________________</p>
-
-                    <strong>Community Share Day</strong>
-                    <p>Join us for an incredible day of sharing and learning! Connect with fellow community
-                        members, showcase your projects, and discover amazing innovations... <br />
-                        _______________________________
-                    </p>
-
-                    <strong>Updated Privacy Policy</strong>
-                    <p>We've updated our privacy policy to enhance data protection and ensure compliance with the latest
-                        regulations. Please review the changes to stay informed about how we handle your information...
-                    </p>
-                </div>
-                <div class="trending">
-                    <b>Trending</b>
-                </div>
-                <div class="trending-container">
-                    <div class="trending-items">
-                        <div class="profilepic"></div>
-                        <p>@tegan <br>World Peace Builder</p>
-                    </div>
-
-                    <div class="trending-items">
-                        <div class="profilepic"></div>
-                        <p>@morgan <br>Super Cool Project</p>
-                    </div>
-
-                    <div class="trending-items">
-                        <div class="profilepic"></div>
-                        <p>@kendall <br>Life Changing App</p>
-                    </div>
-
-                    <div class="trending-items">
-                        <div class="profilepic"></div>
-                        <p>@alex <br>No Traffic Maker</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+            
 </body>
 
 </html>
