now only pics and responsiveness remaining

--- a/index.html
+++ b/index.html
@@ -67,7 +67,154 @@
 
         <!-- top ends here -->
         <!-- main start here -->
+        <div class="main">
+            <div class="project-display">
+                <div class="phead">Your Projects</div>
+                <div class="psect">
+                    <div class="project">
+                        <div class="project-title">
+                            Super Cool Project
+                        </div>
+                        <div class="project-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium vero commodi hic voluptas natus explicabo, debitis doloribus dolorem, molestiae repellat placeat exercitationem dicta architecto quasi maxime iure veniam tempora pariatur.
+                        </div>
+                        <div class="project-icons">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-eye"></i>
+                            <i class="fa-solid fa-pen"></i>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project-title">
+                            Super Cool Project
+                        </div>
+                        <div class="project-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium vero commodi hic voluptas natus explicabo, debitis doloribus dolorem, molestiae repellat placeat exercitationem dicta architecto quasi maxime iure veniam tempora pariatur.
+                        </div>
+                        <div class="project-icons">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-eye"></i>
+                            <i class="fa-solid fa-pen"></i>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project-title">
+                            Super Cool Project
+                        </div>
+                        <div class="project-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium vero commodi hic voluptas natus explicabo, debitis doloribus dolorem, molestiae repellat placeat exercitationem dicta architecto quasi maxime iure veniam tempora pariatur.
+                        </div>
+                        <div class="project-icons">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-eye"></i>
+                            <i class="fa-solid fa-pen"></i>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project-title">
+                            Super Cool Project
+                        </div>
+                        <div class="project-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium vero commodi hic voluptas natus explicabo, debitis doloribus dolorem, molestiae repellat placeat exercitationem dicta architecto quasi maxime iure veniam tempora pariatur.
+                        </div>
+                        <div class="project-icons">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-eye"></i>
+                            <i class="fa-solid fa-pen"></i>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project-title">
+                            Super Cool Project
+                        </div>
+                        <div class="project-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium vero commodi hic voluptas natus explicabo, debitis doloribus dolorem, molestiae repellat placeat exercitationem dicta architecto quasi maxime iure veniam tempora pariatur.
+                        </div>
+                        <div class="project-icons">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-eye"></i>
+                            <i class="fa-solid fa-pen"></i>
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="project-title">
+                            Super Cool Project
+                        </div>
+                        <div class="project-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium vero commodi hic voluptas natus explicabo, debitis doloribus dolorem, molestiae repellat placeat exercitationem dicta architecto quasi maxime iure veniam tempora pariatur.
+                        </div>
+                        <div class="project-icons">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-eye"></i>
+                            <i class="fa-solid fa-pen"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        <!-- acc start here -->
+
+            <div class="announcement">
+                <div class="ahead">Announcements</div>
+                <div class="asect">
+                    <div class="acc">
+                        <div class="acc-title">
+                            Site Maintenance
+                        </div>
+                        <div class="acc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, quos?
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="acc mt5">
+                        <div class="acc-title">
+                            Site Maintenance
+                        </div>
+                        <div class="acc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, quos?
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="acc mt5">
+                        <div class="acc-title">
+                            Site Maintenance
+                        </div>
+                        <div class="acc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, quos?
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        <!-- trending start here -->
+
+            <div class="trending">
+                <div class="thead">Trending</div>
+                <div class="tsect">
+                    <div class="user">
+                        <div class="userpic"></div>
+                        <div class="un-container">
+                            <div class="username">@tegan</div>
+                            <div class="userquote">World Peace Builder</div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="userpic"></div>
+                        <div class="un-container">
+                            <div class="username">@jhonwest</div>
+                            <div class="userquote">King of Wild West</div>
+                        </div>
+                    </div>
+                    <div class="user">
+                        <div class="userpic"></div>
+                        <div class="un-container">
+                            <div class="username">@tegan</div>
+                            <div class="userquote">World Peace Builder</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
             
 </body>
 
