--- a/index.html
+++ b/index.html
@@ -45,14 +45,19 @@
                 </div>
                 <div class="user-info">
                     <i class="fa-solid fa-bell"></i>
-                    <div class="profilepic"></div>
+                    <div class="profilepic">
+                        <img src="./assets/man2.png" alt="" width="32px" height="32px"> 
+                    </div>
                     <span>Morgan Oakley</span>
                 </div>
             </div>
 
             <div class="top2">
                 <div class="h-left">
-                    <div class="profilepic2"></div>
+                    <div class="profilepic2">
+                        <img src="./assets/man2.png" alt="" width="50px" height="50px"> 
+
+                    </div>
                     <p>Hi there,<br>
                         <span class="namebig">Morgan Oakley(@morgan)</span>
                     </p>
@@ -192,21 +197,27 @@
                 <div class="thead">Trending</div>
                 <div class="tsect">
                     <div class="user">
-                        <div class="userpic"></div>
+                        <div class="userpic">
+                            <img src="./assets/user.png" alt="" width="40px" height="40px">
+                        </div>
                         <div class="un-container">
                             <div class="username">@tegan</div>
                             <div class="userquote">World Peace Builder</div>
                         </div>
                     </div>
                     <div class="user">
-                        <div class="userpic"></div>
+                        <div class="userpic">
+                            <img src="./assets/man.png" alt="" width="40px" height="40px">
+                        </div>
                         <div class="un-container">
                             <div class="username">@jhonwest</div>
                             <div class="userquote">King of Wild West</div>
                         </div>
                     </div>
                     <div class="user">
-                        <div class="userpic"></div>
+                        <div class="userpic">
+                            <img src="./assets/woman.png" alt="" width="40px" height="40px">
+                        </div>
                         <div class="un-container">
                             <div class="username">@tegan</div>
                             <div class="userquote">World Peace Builder</div>
